[gd_scene load_steps=8 format=2]

[ext_resource path="res://themes/Theme.tres" type="Theme" id=2]
[ext_resource path="res://themes/defaultbuttonbg.tres" type="StyleBox" id=4]
[ext_resource path="res://scripts/Settings.gd" type="Script" id=7]
[ext_resource path="res://scripts/PopupDialog.gd" type="Script" id=8]

[sub_resource type="InputEventKey" id=10]
scancode = 16777217

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 10 )

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -566, -257 )
script = ExtResource( 7 )

[node name="DarkerBG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.666667 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 64
custom_constants/margin_top = 64
custom_constants/margin_left = 64
custom_constants/margin_bottom = 64
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_left = 64.0
margin_top = 64.0
margin_right = 960.0
margin_bottom = 536.0
theme = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 24
custom_constants/margin_left = 32
custom_constants/margin_bottom = 24
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
margin_left = 32.0
margin_top = 24.0
margin_right = 864.0
margin_bottom = 448.0
custom_constants/separation = 24

[node name="title" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_right = 832.0
margin_bottom = 20.0
custom_constants/separation = -13

[node name="settings" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/title"]
margin_right = 832.0
margin_bottom = 30.0
text = "settings"
align = 1

[node name="ColorRect" type="ColorRect" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/title"]
show_behind_parent = true
margin_top = 17.0
margin_right = 832.0
margin_bottom = 20.0
rect_min_size = Vector2( 700, 3 )
size_flags_horizontal = 5
color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )

[node name="explained" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 832.0
margin_bottom = 74.0
text = "(use your mouse or press tab to navigate the options.)"
align = 1
valign = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 832.0
margin_bottom = 338.0
size_flags_vertical = 3
custom_constants/separation = 64

[node name="controls_side" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 12.0
margin_right = 372.0
margin_bottom = 240.0
rect_min_size = Vector2( 360, 0 )
size_flags_horizontal = 6
custom_constants/separation = 8

[node name="controls" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side"]
margin_right = 360.0
margin_bottom = 30.0
text = "controls"
align = 1
valign = 2

[node name="HBoxContainer7" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side"]
margin_top = 38.0
margin_right = 360.0
margin_bottom = 240.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7"]
margin_right = 178.0
margin_bottom = 202.0
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer"]
margin_top = 31.0
margin_right = 178.0
margin_bottom = 171.0
rect_min_size = Vector2( 150, 140 )
size_flags_vertical = 6

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -60.5
margin_right = 76.0
margin_bottom = 60.5
size_flags_vertical = 5
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer/Panel/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 148.0
margin_bottom = 133.0
text = "click on
each control to assign a custom key"
align = 1
autowrap = true

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7"]
margin_left = 198.0
margin_right = 360.0
margin_bottom = 202.0
size_flags_horizontal = 10
custom_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2"]
margin_left = 40.0
margin_right = 162.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 10
custom_constants/separation = 16

[node name="up" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2/HBoxContainer"]
margin_top = 2.0
margin_right = 30.0
margin_bottom = 32.0
text = "up"

[node name="up_key" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2/HBoxContainer"]
margin_left = 46.0
margin_right = 122.0
margin_bottom = 34.0
rect_min_size = Vector2( 76, 32 )
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "w"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2"]
margin_left = 31.0
margin_top = 42.0
margin_right = 162.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 10
custom_constants/separation = 16

[node name="left" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2/HBoxContainer2"]
margin_top = 2.0
margin_right = 39.0
margin_bottom = 32.0
text = "left"

[node name="left_key" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2/HBoxContainer2"]
margin_left = 55.0
margin_right = 131.0
margin_bottom = 34.0
rect_min_size = Vector2( 76, 32 )
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "a"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2"]
margin_left = 8.0
margin_top = 84.0
margin_right = 162.0
margin_bottom = 118.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 10
custom_constants/separation = 16

[node name="down" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2/HBoxContainer3"]
margin_top = 2.0
margin_right = 62.0
margin_bottom = 32.0
text = "down"

[node name="down_key" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2/HBoxContainer3"]
margin_left = 78.0
margin_right = 154.0
margin_bottom = 34.0
rect_min_size = Vector2( 76, 32 )
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "s"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2"]
margin_left = 12.0
margin_top = 126.0
margin_right = 162.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 10
custom_constants/separation = 16

[node name="right" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2/HBoxContainer4"]
margin_top = 2.0
margin_right = 58.0
margin_bottom = 32.0
text = "right"

[node name="right_key" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2/HBoxContainer4"]
margin_left = 74.0
margin_right = 150.0
margin_bottom = 34.0
rect_min_size = Vector2( 76, 32 )
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "d"

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2"]
visible = false
margin_top = 168.0
margin_right = 183.0
margin_bottom = 202.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 10
custom_constants/separation = 16

[node name="interact" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2/HBoxContainer5"]
margin_top = 2.0
margin_right = 91.0
margin_bottom = 32.0
text = "interact"

[node name="interact_key" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2/HBoxContainer5"]
margin_left = 107.0
margin_right = 183.0
margin_bottom = 34.0
rect_min_size = Vector2( 76, 32 )
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "e"

[node name="HBoxContainer6" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2"]
visible = false
margin_top = 168.0
margin_right = 200.0
margin_bottom = 202.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 10
custom_constants/separation = 16

[node name="light" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2/HBoxContainer6"]
margin_top = 2.0
margin_right = 108.0
margin_bottom = 32.0
text = "flashlight"

[node name="light_key" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2/HBoxContainer6"]
margin_left = 124.0
margin_right = 200.0
margin_bottom = 34.0
rect_min_size = Vector2( 76, 32 )
focus_neighbour_left = NodePath(".")
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "l"

[node name="HBoxContainer7" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2"]
margin_top = 168.0
margin_right = 162.0
margin_bottom = 202.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 10
custom_constants/separation = 16

[node name="sprint" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2/HBoxContainer7"]
margin_top = 2.0
margin_right = 70.0
margin_bottom = 32.0
text = "sprint"

[node name="sprint_key" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2/HBoxContainer7"]
margin_left = 86.0
margin_right = 162.0
margin_bottom = 34.0
rect_min_size = Vector2( 76, 32 )
focus_neighbour_left = NodePath(".")
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "shift"

[node name="audio_side" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 460.0
margin_right = 820.0
margin_bottom = 240.0
rect_min_size = Vector2( 360, 0 )
focus_mode = 1
size_flags_horizontal = 6
custom_constants/separation = 16

[node name="audio" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side"]
margin_right = 360.0
margin_bottom = 30.0
size_flags_vertical = 0
text = "audio"
align = 1
valign = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side"]
margin_top = 46.0
margin_right = 360.0
margin_bottom = 135.0
size_flags_vertical = 3
custom_constants/separation = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side/VBoxContainer"]
margin_right = 360.0
margin_bottom = 34.0
size_flags_horizontal = 3

[node name="music" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side/VBoxContainer/HBoxContainer2"]
margin_top = 2.0
margin_right = 154.0
margin_bottom = 32.0
size_flags_horizontal = 2
text = "music volume"

[node name="music_mute" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side/VBoxContainer/HBoxContainer2"]
margin_left = 265.0
margin_top = 2.0
margin_right = 324.0
margin_bottom = 32.0
size_flags_horizontal = 10
text = "mute"

[node name="CheckBoxMusic" type="CheckBox" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side/VBoxContainer/HBoxContainer2"]
margin_left = 328.0
margin_right = 360.0
margin_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 32, 0 )
size_flags_horizontal = 8
theme = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
shortcut_in_tooltip = false
flat = true
align = 2
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side/VBoxContainer"]
margin_left = 42.0
margin_top = 38.0
margin_right = 318.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 6
custom_constants/separation = 16

[node name="music_vol_minus" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side/VBoxContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 34.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "-"

[node name="music_vol" type="HSlider" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side/VBoxContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 228.0
margin_bottom = 32.0
rect_min_size = Vector2( 180, 32 )
theme = ExtResource( 2 )
min_value = -60.0
max_value = 0.0
rounded = true
scrollable = false

[node name="music_vol_plus" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side/VBoxContainer/HBoxContainer"]
margin_left = 244.0
margin_right = 276.0
margin_bottom = 34.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "+"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side"]
margin_top = 151.0
margin_right = 360.0
margin_bottom = 240.0
size_flags_vertical = 3
custom_constants/separation = 4

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side/VBoxContainer2"]
margin_right = 360.0
margin_bottom = 34.0
size_flags_horizontal = 3

[node name="fx" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side/VBoxContainer2/HBoxContainer3"]
margin_top = 2.0
margin_right = 160.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "sound_fx"

[node name="music_mute" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side/VBoxContainer2/HBoxContainer3"]
margin_left = 265.0
margin_top = 2.0
margin_right = 324.0
margin_bottom = 32.0
size_flags_horizontal = 10
text = "mute"

[node name="CheckBoxFX" type="CheckBox" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side/VBoxContainer2/HBoxContainer3"]
margin_left = 328.0
margin_right = 360.0
margin_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 32, 0 )
size_flags_horizontal = 8
theme = ExtResource( 2 )
shortcut_in_tooltip = false
flat = true
align = 2
expand_icon = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side/VBoxContainer2"]
margin_left = 42.0
margin_top = 38.0
margin_right = 318.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 6
custom_constants/separation = 16

[node name="fx_vol_minus" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side/VBoxContainer2/HBoxContainer2"]
margin_right = 32.0
margin_bottom = 34.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "-"

[node name="fx_vol" type="HSlider" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side/VBoxContainer2/HBoxContainer2"]
margin_left = 48.0
margin_right = 228.0
margin_bottom = 32.0
rect_min_size = Vector2( 180, 32 )
theme = ExtResource( 2 )
min_value = -60.0
max_value = 0.0
rounded = true
scrollable = false

[node name="fx_vol_plus" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side/VBoxContainer2/HBoxContainer2"]
margin_left = 244.0
margin_right = 276.0
margin_bottom = 34.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "+"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 390.0
margin_right = 832.0
margin_bottom = 424.0
size_flags_vertical = 10

[node name="return" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 682.0
margin_right = 832.0
margin_bottom = 34.0
rect_min_size = Vector2( 150, 32 )
size_flags_horizontal = 10
theme = ExtResource( 2 )
shortcut_in_tooltip = false
shortcut = SubResource( 9 )
text = "return"

[node name="PopupDialog" type="PopupDialog" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 200 )
popup_exclusive = true
script = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PopupDialog/MarginContainer"]
margin_left = 16.0
margin_top = 20.0
margin_right = 395.0
margin_bottom = 180.0
size_flags_vertical = 4
custom_constants/separation = 16

[node name="Label" type="Label" parent="PopupDialog/MarginContainer/VBoxContainer"]
margin_right = 379.0
margin_bottom = 30.0
theme = ExtResource( 2 )
text = "press the key you want to assign:"
align = 1

[node name="LineEdit" type="LineEdit" parent="PopupDialog/MarginContainer/VBoxContainer"]
margin_left = 154.0
margin_top = 46.0
margin_right = 224.0
margin_bottom = 110.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource( 2 )
custom_styles/focus = SubResource( 5 )
align = 1
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="PopupDialog/MarginContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 379.0
margin_bottom = 160.0

[node name="cancel" type="Button" parent="PopupDialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 18.0
margin_right = 168.0
margin_bottom = 34.0
rect_min_size = Vector2( 150, 32 )
size_flags_horizontal = 6
theme = ExtResource( 2 )
shortcut_in_tooltip = false
text = "cancel"

[node name="confirm" type="Button" parent="PopupDialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 210.0
margin_right = 360.0
margin_bottom = 34.0
rect_min_size = Vector2( 150, 32 )
size_flags_horizontal = 6
theme = ExtResource( 2 )
shortcut_in_tooltip = false
text = "confirm"

[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2/HBoxContainer/up_key" to="." method="_on_up_key_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2/HBoxContainer2/left_key" to="." method="_on_left_key_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2/HBoxContainer3/down_key" to="." method="_on_down_key_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2/HBoxContainer4/right_key" to="." method="_on_right_key_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2/HBoxContainer5/interact_key" to="." method="_on_interact_key_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2/HBoxContainer6/light_key" to="." method="_on_light_key_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/controls_side/HBoxContainer7/VBoxContainer2/HBoxContainer7/sprint_key" to="." method="_on_sprint_key_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side/VBoxContainer/HBoxContainer2/CheckBoxMusic" to="." method="_on_CheckBoxMusic_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side/VBoxContainer/HBoxContainer/music_vol_minus" to="." method="_on_music_vol_minus_pressed"]
[connection signal="value_changed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side/VBoxContainer/HBoxContainer/music_vol" to="." method="_on_music_vol_value_changed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side/VBoxContainer/HBoxContainer/music_vol_plus" to="." method="_on_music_vol_plus_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side/VBoxContainer2/HBoxContainer3/CheckBoxFX" to="." method="_on_CheckBoxFX_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side/VBoxContainer2/HBoxContainer2/fx_vol_minus" to="." method="_on_fx_vol_minus_pressed"]
[connection signal="value_changed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side/VBoxContainer2/HBoxContainer2/fx_vol" to="." method="_on_fx_vol_value_changed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/audio_side/VBoxContainer2/HBoxContainer2/fx_vol_plus" to="." method="_on_fx_vol_plus_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer2/return" to="." method="_on_return_pressed"]
[connection signal="about_to_show" from="PopupDialog" to="." method="_on_PopupDialog_about_to_show"]
[connection signal="pressed" from="PopupDialog/MarginContainer/VBoxContainer/HBoxContainer/cancel" to="PopupDialog" method="_on_cancel_pressed"]
[connection signal="pressed" from="PopupDialog/MarginContainer/VBoxContainer/HBoxContainer/confirm" to="PopupDialog" method="_on_confirm_pressed"]
